# ska-sdp-ms-zarr-converter

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
docs/: requirements.txt
docs/src/: conf.py
src/ms_zarr_converter/: constants.py  convert.py
tests/: test_convert.py
